<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">

    <com.hongshi.wuliudidi.myroute.DiDiTitleView
        android:id="@+id/add_route_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/add_route_title">

        <RelativeLayout
            android:id="@+id/start_city_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/white">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"/>
            <ImageView
                android:id="@+id/start_image"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/start_city"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/start_addr_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:text="@string/my_route_start_txt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/start_image"/>
            <TextView
                android:id="@+id/start_addr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#cccccc"
                android:textSize="16sp"
                android:text="@string/my_route_choose_start"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/start_addr_tip"/>
            <ImageView
                android:layout_width="19dp"
                android:layout_height="20dp"
                android:src="@drawable/my_item_right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/end_city_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_below="@id/start_city_layout"
            android:background="@color/white">

            <ImageView
                android:id="@+id/end_image"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/end_city"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/end_addr_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:text="@string/my_route_end_txt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/end_image"/>
            <TextView
                android:id="@+id/end_addr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#cccccc"
                android:textSize="16sp"
                android:text="@string/my_route_choose_end"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/end_addr_tip"/>
            <ImageView
                android:layout_width="19dp"
                android:layout_height="20dp"
                android:src="@drawable/my_item_right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/choose_goods_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_below="@id/end_city_layout"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"/>
            <ImageView
                android:id="@+id/common_goods_image"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/common_goods"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/goods_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/common_goods_image"
                android:layout_marginLeft="6dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:text="@string/my_route_common_goods"
                android:layout_centerVertical="true" />
            <TextView
                android:id="@+id/choose_goods_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#cccccc"
                android:textSize="16sp"
                android:text="@string/my_route_choose_common_goods"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/goods_tip"/>
            <ImageView
                android:layout_width="19dp"
                android:layout_height="20dp"
                android:src="@drawable/my_item_right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/sure_add_btn"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:background="@drawable/solid_btn_style"
        android:layout_below="@id/content_container"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"/>

</RelativeLayout>